[gd_scene load_steps=30 format=2]

[ext_resource path="res://entities/shop_keeper.tscn" type="PackedScene" id=1]
[ext_resource path="res://areas/chunk_content.gd" type="Script" id=2]
[ext_resource path="res://_glb/chunks/chunk124.glb" type="PackedScene" id=3]
[ext_resource path="res://entities/env/hut.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/wardrobe.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/dialog_trigger.gd" type="Script" id=6]
[ext_resource path="res://dialog/medium.dialog" type="Resource" id=7]
[ext_resource path="res://dialog/mom.dialog" type="Resource" id=8]
[ext_resource path="res://entities/power_thing.tscn" type="PackedScene" id=9]
[ext_resource path="res://_glb/chunks/mat_basic.material" type="Material" id=10]
[ext_resource path="res://entities/door.gd" type="Script" id=11]
[ext_resource path="res://items/capacitor_pickup.tscn" type="PackedScene" id=12]
[ext_resource path="res://management/player_start.gd" type="Script" id=13]
[ext_resource path="res://items/bug_pickup.tscn" type="PackedScene" id=14]
[ext_resource path="res://entities/env/rock1.tscn" type="PackedScene" id=15]
[ext_resource path="res://entities/the_medium.gd" type="Script" id=16]
[ext_resource path="res://items/coat_pickup.tscn" type="PackedScene" id=17]
[ext_resource path="res://dialog/shops/plateau_shop.dialog" type="Resource" id=19]
[ext_resource path="res://items/gem_pickup.tscn" type="PackedScene" id=20]

[sub_resource type="CubeMesh" id=253]

[sub_resource type="BoxShape" id=254]
extents = Vector3( 1.5, 2, 0.5 )

[sub_resource type="Animation" id=255]
resource_name = "Activate"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 3.21773, 0.0294952, 5.62034 ), Vector3( 3.21773, 0.0294952, 5.23832 ), Vector3( 3.21773, -4.65025, 5.23832 ) ]
}

[sub_resource type="Animation" id=256]
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 3.21773, 0.0294952, 5.62034 ) ]
}

[sub_resource type="Animation" id=257]
resource_name = "Activate"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.1, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.24524, -0.359253, -3.03695 ), Vector3( 0.632339, -0.359253, -3.03695 ), Vector3( 0.632339, -0.359253, -3.03695 ), Vector3( 0.632339, -4.70335, -3.03695 ) ]
}

[sub_resource type="Animation" id=258]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.24524, -0.359253, -3.03695 ) ]
}

[sub_resource type="BoxShape" id=259]
extents = Vector3( 1.24123, 1.82926, 1 )

[sub_resource type="BoxShape" id=250]
extents = Vector3( 2.65809, 1.56186, 1 )

[sub_resource type="CylinderShape" id=251]

[sub_resource type="CapsuleMesh" id=252]
radius = 0.2
mid_height = 1.2

[node name="chunk124" instance=ExtResource( 3 )]
script = ExtResource( 2 )

[node name="hut" parent="." index="1" instance=ExtResource( 4 )]
transform = Transform( -0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, -220, -230.951, 14 )

[node name="player_start" type="Position3D" parent="hut" index="0"]
transform = Transform( -0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, -0.965926, -2.01971, 4.12927, 1.15509 )
script = ExtResource( 13 )

[node name="wardrobe" parent="hut" index="1" instance=ExtResource( 5 )]
transform = Transform( 0.873603, 0, -0.48664, 0, 1, 0, 0.48664, 0, 0.873603, 2.72163, 5.08853, 1.96338 )

[node name="capacitor_pickup" parent="." index="2" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -129.07, -229.795, -37.2621 )

[node name="hut2" parent="." index="3" instance=ExtResource( 4 )]
transform = Transform( 0.99245, -0.122649, 0, 0.122649, 0.99245, 0, 0, 0, 1, 39.2949, -251.668, -51.5167 )

[node name="bug_pickup" parent="." index="4" instance=ExtResource( 14 )]
transform = Transform( -0.900782, 0, -0.434272, 0, 1, 0, 0.434272, 0, -0.900782, -229.986, -221.097, -39.6066 )

[node name="bug_pickup2" parent="." index="5" instance=ExtResource( 14 )]
transform = Transform( -0.780958, -0.198222, 0.592294, -0.246018, 0.969265, -7.22159e-09, -0.57409, -0.145715, -0.805721, -227.605, -221.515, -43.4451 )

[node name="bug_pickup3" parent="." index="6" instance=ExtResource( 14 )]
transform = Transform( -0.492792, -0.0352028, 0.869435, -0.0712537, 0.997458, 1.85791e-09, -0.867225, -0.0619505, -0.494048, -232.548, -219.88, -41.5774 )

[node name="rock1" parent="." index="7" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 0.947311, 0.320315, 0, -0.320315, 0.947311, -240.997, -226.185, -55.0654 )

[node name="the_medium" type="Spatial" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -231.618, -225.576, -40.6129 )
script = ExtResource( 16 )

[node name="power_thing" parent="the_medium" index="0" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -9.46501, -3.3362, -4.64904 )

[node name="power_thing2" parent="the_medium" index="1" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -9.46501, -3.3362, -2.93414 )

[node name="power_thing3" parent="the_medium" index="2" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -9.46501, -3.3362, -1.17644 )

[node name="door" type="KinematicBody" parent="the_medium" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.21773, 0.0294952, 5.62034 )
script = ExtResource( 11 )
required_power = 3

[node name="MeshInstance" type="MeshInstance" parent="the_medium/door" index="0"]
transform = Transform( 1.3, 0, 0, 0, 2.3, 0, 0, 0, 0.6, 0, 0, 0 )
mesh = SubResource( 253 )
material/0 = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="the_medium/door" index="1"]
shape = SubResource( 254 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="the_medium/door" index="2"]
anims/Activate = SubResource( 255 )
anims/RESET = SubResource( 256 )

[node name="door2" type="KinematicBody" parent="the_medium" index="4"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.24524, -0.359253, -3.03695 )
script = ExtResource( 11 )

[node name="MeshInstance" type="MeshInstance" parent="the_medium/door2" index="0"]
transform = Transform( 1.3, 0, 0, 0, 2.3, 0, 0, 0, 0.6, 0, 0, 0 )
mesh = SubResource( 253 )
material/0 = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="the_medium/door2" index="1"]
shape = SubResource( 254 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="the_medium/door2" index="2"]
anims/Activate = SubResource( 257 )
anims/RESET = SubResource( 258 )

[node name="entrance" type="Area" parent="the_medium" index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.30196, -1.11064, 8.0642 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="the_medium/entrance" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.57933, -1.24027 )
shape = SubResource( 259 )

[node name="dialog_zone" type="Area" parent="the_medium" index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.50098, -1.5452, -2.22174 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 6 )
dialog_sequence = ExtResource( 7 )
main_speaker = NodePath("..")

[node name="CollisionShape" type="CollisionShape" parent="the_medium/dialog_zone" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.302307, 0.751144, 1.92409 )
shape = SubResource( 250 )

[node name="mom" type="Area" parent="the_medium" index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.16202, -1.2652, 2.45446 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 6 )
dialog_sequence = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="the_medium/mom" index="0"]
shape = SubResource( 251 )

[node name="MeshInstance" type="MeshInstance" parent="the_medium/mom" index="1"]
transform = Transform( 1, 0, 0, 0, 0.00453788, -0.99999, 0, 0.99999, 0.00453788, 0, -0.279541, 0.00127029 )
mesh = SubResource( 252 )
material/0 = null

[node name="plateau_shop" parent="." index="9" instance=ExtResource( 1 )]
transform = Transform( 0.380118, 0, 0.924938, 0, 1, 0, -0.924938, 0, 0.380118, 12.3516, -248.98, -0.396636 )
dialog_sequence = ExtResource( 19 )
inventory = "res://entities/shop_stock/village_stock.json"

[node name="bug_pickup4" parent="." index="10" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.32987, -132.979, -181.332 )

[node name="bug_pickup5" parent="." index="11" instance=ExtResource( 14 )]
transform = Transform( -0.0964016, 0, 0.995342, 0, 1, 0, -0.995342, 0, -0.0964016, -0.20876, -128.721, -184.34 )

[node name="bug_pickup6" parent="." index="12" instance=ExtResource( 14 )]
transform = Transform( -0.0462348, 0, -0.998931, 0, 1, 0, 0.998931, 0, -0.0462348, 10.3712, -128.754, -189.049 )

[node name="bug_pickup7" parent="." index="13" instance=ExtResource( 14 )]
transform = Transform( -0.0462348, 0, -0.998931, 0, 1, 0, 0.998931, 0, -0.0462348, 18.6186, -127.862, -188.438 )

[node name="bug_pickup9" parent="." index="14" instance=ExtResource( 14 )]
transform = Transform( 0.274532, 0.399864, 0.874495, -0.0860081, 0.916003, -0.391843, -0.957724, 0.0323598, 0.285864, 38.4432, -249.063, -51.7613 )

[node name="bug_pickup8" parent="." index="15" instance=ExtResource( 14 )]
transform = Transform( -0.797047, 0, -0.603918, 0, 1, 0, 0.603918, 0, -0.797047, 39.3069, -246.869, -53.803 )

[node name="bug_pickup10" parent="." index="16" instance=ExtResource( 14 )]
transform = Transform( 0.941541, 0, 0.336898, 0, 1, 0, -0.336898, 0, 0.941541, 38.7431, -246.869, -54.3123 )

[node name="coat_pickup" parent="." index="17" instance=ExtResource( 17 )]
transform = Transform( -0.832361, 0, -0.554235, 0, 1, 0, 0.554235, 0, -0.832361, 40.0058, -247.454, -49.2127 )

[node name="gem_pickup" parent="." index="18" instance=ExtResource( 20 )]
transform = Transform( 0.942938, 0, 0.332968, 0, 1, 0, -0.332968, 0, 0.942938, -147.155, -69.9123, -67.7388 )
quantity = 3

[node name="gem_pickup2" parent="." index="19" instance=ExtResource( 20 )]
transform = Transform( 0.942938, 0, 0.332968, 0, 1, 0, -0.332968, 0, 0.942938, -144.413, -71.36, -62.6068 )
quantity = 3

[node name="gem_pickup3" parent="." index="20" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -135.57, -77.6816, -52.9546 )
quantity = 3

[node name="gem_pickup4" parent="." index="21" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -135.565, -79.389, -39.8451 )
quantity = 3

[node name="gem_pickup5" parent="." index="22" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -133.801, -82.0815, -32.1377 )
quantity = 3

[node name="bug_pickup11" parent="." index="23" instance=ExtResource( 14 )]
transform = Transform( -0.917297, 0, 0.398205, 0, 1, 0, -0.398205, 0, -0.917297, -146.042, -65.8516, -75.9818 )

[node name="bug_pickup12" parent="." index="24" instance=ExtResource( 14 )]
transform = Transform( -0.288731, 0, -0.95741, 0, 1, 0, 0.95741, 0, -0.288731, -146.356, -64.7915, -76.8682 )

[node name="bug_pickup13" parent="." index="25" instance=ExtResource( 14 )]
transform = Transform( -0.974492, 0, 0.224424, 0, 1, 0, -0.224424, 0, -0.974492, -145.254, -66.6554, -77.9812 )

[node name="bug_pickup14" parent="." index="26" instance=ExtResource( 14 )]
transform = Transform( 0.950817, 0.0827008, -0.298508, -0.0866515, 0.996239, 2.58242e-09, 0.297385, 0.0258662, 0.954407, -145.008, -66.311, -76.5192 )

[node name="bug_pickup15" parent="." index="27" instance=ExtResource( 14 )]
transform = Transform( 0.954407, 0, -0.298508, 0, 1, 0, 0.298508, 0, 0.954407, -145.557, -66.1093, -77.4754 )

[node name="gem_pickup6" parent="." index="28" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -205.595, -222.605, -185.694 )
quantity = 3

[node name="gem_pickup7" parent="." index="29" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -184.13, -203.206, -166.695 )
quantity = 3

[node name="gem_pickup9" parent="." index="30" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38.1758, -249.548, -50.0251 )
quantity = 2

[node name="gem_pickup8" parent="." index="31" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 37.9837, -247.696, -49.597 )
quantity = 8

[node name="gem_pickup10" parent="." index="32" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -45.4114, -184.259, -40.5777 )
quantity = 3

[node name="gem_pickup11" parent="." index="33" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -43.3939, -184.259, -44.6246 )
quantity = 3

[node name="gem_pickup12" parent="." index="34" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42.1836, -184.259, -50.3742 )
quantity = 3

[node name="gem_pickup13" parent="." index="35" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42.0433, -184.259, -56.486 )
quantity = 3

[node name="gem_pickup14" parent="." index="36" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -43.3293, -183.9, -62.4229 )
quantity = 3

[node name="bug_pickup16" parent="." index="37" instance=ExtResource( 14 )]
transform = Transform( -0.864889, 0, 0.501964, 0, 1, 0, -0.501964, 0, -0.864889, -46.4282, -180.781, -68.4278 )

[connection signal="activated" from="the_medium/power_thing" to="the_medium/door" method="_on_activated"]
[connection signal="activated" from="the_medium/power_thing2" to="the_medium/door" method="_on_activated"]
[connection signal="activated" from="the_medium/power_thing3" to="the_medium/door" method="_on_activated"]
[connection signal="body_entered" from="the_medium/entrance" to="the_medium" method="_on_entrance_body_entered"]
